syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;

import "scalapb/scalapb.proto";
import "edu/uci/ics/amber/engine/common/virtualidentity.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true

};

message Loads {
  edu.uci.ics.amber.engine.common.ActorVirtualIdentity worker = 1 [(scalapb.field).no_box = true];
  repeated int64 load = 2;
}

message SelfWorkloadSample {
  repeated Loads loads = 1;
}

message SelfWorkloadMetrics {
  int64 unprocessed_data_input_queue_size = 1;
  int64 unprocessed_control_input_queue_size = 2;
  int64 stashed_data_input_queue_size = 3;
  int64 stashed_control_input_queue_size = 4;
}

message SelfWorkloadReturn {
  SelfWorkloadMetrics metrics = 1 [(scalapb.field).no_box = true];
  repeated  SelfWorkloadSample samples = 2;
}